--- a/mapa_nehody/waze_nehody.html
+++ b/mapa_nehody/waze_nehody.html
@@ -11,8 +11,8 @@
 	<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
 
-	<script src="https://dennikn.github.io/web/mapa_nehody/leaflet.js"></script>
-	<script src="https://dennikn.github.io/web/mapa_nehody/leaflet-heat.js"></script>
+	<script src="leaflet.js"></script>
+	<script src="leaflet-heat.js"></script>
 
 </head>
 <body>
