--- a/map_accidents/waze_accidents.html
+++ b/map_accidents/waze_accidents.html
@@ -13,8 +13,15 @@
 
 	<script src="leaflet.js"></script>
 	<script src="leaflet-heat.js"></script>
-
+<style>
+ body {
+            height: 100%;
+            width: 100%;
+            margin: 0;
+        }
+				</style>
 </head>
+
 <body>
 		
 <div id="map" style="width: 100%; height: 100%;">
