--- a/map_accidents/waze_accidents.html
+++ b/map_accidents/waze_accidents.html
@@ -15,7 +15,7 @@
 	<script src="leaflet-heat.js"></script>
 <style>
  body {
-            height: 100%;
+            height: 50vh;
             width: 100%;
             margin: 0;
         }
