--- a/map_accidents/waze_accidents.html
+++ b/map_accidents/waze_accidents.html
@@ -15,7 +15,7 @@
 	<script src="leaflet-heat.js"></script>
 <style>
  body {
-            height: 50vh;
+            height: auto;
             width: 100%;
             margin: 0;
         }
@@ -24,7 +24,7 @@
 
 <body>
 		
-<div id="map" style="width: 100%; height: 100%;">
+<div id="map" style="width: 100%; height: 50%;">
 		
 </div>
 <script>
