--- a/map_accidents/waze_accidents.html
+++ b/map_accidents/waze_accidents.html
@@ -15,16 +15,17 @@
 	<script src="leaflet-heat.js"></script>
 <style>
  body {
-            height: auto;
+            height: 50vh;
             width: 100%;
             margin: 0;
+						max-height: 300px;
         }
 				</style>
 </head>
 
 <body>
 		
-<div id="map" style="width: 100%; height: 50%;">
+<div id="map" style="width: 100%; height: 100%;">
 		
 </div>
 <script>
