--- a/d3_jams/jams.html
+++ b/d3_jams/jams.html
@@ -6,7 +6,7 @@
 
     <style>
  body {
-            height: 100%;
+            height: 60vh;
             width: 100%;
             margin: 0;
         }
