--- a/voting/index.html
+++ b/voting/index.html
@@ -82,14 +82,14 @@
     }
 
     .grid-vote {
-      margin-top: 2%;
-      padding: 2%;
+      margin-top: 1%;
+      padding: 1%;
       margin-left: 5%;
       margin-right: 5%;
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(2);
-      column-gap: 9px;
+      column-gap: 4px;
       width: 80%;
       border: solid 3px;
       border-color: rgb(27, 3, 3);
@@ -108,9 +108,9 @@
       color: white;
       border: solid 1 px;
       border-radius: 12px;
-      padding: 4%;
+      padding: 2%;
       text-align: center;
-      height: 20px;
+      height: 18px;
     }
 
     .pool {
@@ -157,7 +157,9 @@
 
     .button-wrapper {
       margin-top: 2%;
-      width: 100%;
+      margin-left: 5%;
+      margin-right: 5%;
+      width: 80%;
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(2);
