--- a/voting/index.html
+++ b/voting/index.html
@@ -9,11 +9,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
   <style>
-    .voting-wrapper {
+
+    body {
       margin: 0;
+      height: 100%;
+      max-width: 600px;
+      width: 100%;
+
+    }
+    .voting-wrapper {
       background: white;
       color: black;
-      max-width: 600px;
     }
 
 
