--- a/voting/index.html
+++ b/voting/index.html
@@ -513,9 +513,9 @@
     })
     const namesRaw = ['augustinic', 'bajan', 'borgula', 'budaj', 'bulla', 'buocik', 'cahojova', 'cerna', 'cerny', 'chren', 'dostal', 'drozd', 'farkasovska', 'ferencakova', 'greksa', 'grendel', 'hanulik', 'hanulikova', 'hochschorner', 'hrcka', 'jambor', 'jegh', 'jencik', 'kacer', 'kalisky', 'kimerlingova', 'kolek', 'korcek', 'kriz', 'kuruc', 'mikulec', 'mrva', 'oleksak', 'patoprsta', 'pilinsky', 'plsekova', 'simoncicova', 'stasselova', 'svorenova', 'tvrda', 'uhler', 'vetrak', 'weinstuk', 'zatovicova', 'zitny']
 
-    const selectSmer = ["bajan", "borgula", "drozd", "farkasovska", "hanulik", "hanulikova", "oleksak", "cerna"]
+    const selectSmer = ["bajan", "borgula", "drozd", "farkasovska", "hanulik", "hanulikova", "oleksak"]
     const selectCandidates = ["borgula", "buocik", "cahojova", "chren", "drozd", "hrcka", "mrva", "patoprstva", "uhler", "pilinsky", "farkasovska", "ferencakova", "greksa", "hanulik"]
-    const selectRight = ["buocik", "chren", "drozd", "mrva", "uhler", "jencik", "kriz", "cerny", "ferencakova", "jambor", "jegh", "kacer", "zatovicova", "zitny", "plsekova", "augustinic", "chren", "dostal", "grendel", "kimerlingova", "kolek", "tvrda", "vetrak", "kalisky"]
+    const selectRight = ["buocik", "chren", "mrva", "uhler", "jencik", "kriz", "cerny", "ferencakova", "jambor", "jegh", "kacer", "zatovicova", "zitny", "plsekova", "augustinic", "chren", "dostal", "grendel", "kimerlingova", "kolek", "tvrda", "vetrak", "kalisky"]
     const selectWithout =  ["mrva", "pilinsky", "greksa", "svorenova", "mikulec", "cahojova", "hrcka", "stasselova"]
 
     function selectNames(group, color) {
