--- a/voting/index.html
+++ b/voting/index.html
@@ -185,6 +185,20 @@
     }
     }
 
+    @media screen and (max-width: 400px) {
+      .pool-img {
+      height: 38px;
+      width: 38px;
+      border: solid 5px;
+      border-radius: 50%;
+      border-color: rgba(255, 255, 255, 0);
+    }
+      .img-text {
+      text-align: left;
+      font-size: 11px;
+    }
+    }
+
     .button-wrapper {
       margin-top: 2%;
       margin-left: 5%;
