--- a/voting/index.html
+++ b/voting/index.html
@@ -117,7 +117,6 @@
     }
 
     .pool {
-      width: 94%;
       height: 100%;
       display: grid;
       grid-template-columns: 20% 20% 20% 20% 20%;
@@ -161,11 +160,10 @@
     }
     @media screen and (max-width: 520px) {
       .pool {
-      width: 94%;
       height: 100%;
       display: grid;
       grid-template-columns: 25% 25% 25% 25%;
-      grid-column-gap: 2%;
+      grid-column-gap: 3%;
     }
       .img-box {
       width: 80%;
@@ -186,6 +184,13 @@
     }
 
     @media screen and (max-width: 400px) {
+      .pool {
+      height: 100%;
+      display: grid;
+      grid-template-columns: 25% 25% 25% 25%;
+      grid-column-gap: 4%;
+    }
+
       .pool-img {
       height: 38px;
       width: 38px;
