--- a/voting/index.html
+++ b/voting/index.html
@@ -117,6 +117,7 @@
     }
 
     .pool {
+      width: 94%;
       height: 100%;
       display: grid;
       grid-template-columns: 20% 20% 20% 20% 20%;
@@ -160,10 +161,11 @@
     }
     @media screen and (max-width: 520px) {
       .pool {
+      width: 94%;
       height: 100%;
       display: grid;
       grid-template-columns: 25% 25% 25% 25%;
-      grid-column-gap: 3%;
+      grid-column-gap: 2%;
     }
       .img-box {
       width: 80%;
@@ -185,6 +187,7 @@
 
     @media screen and (max-width: 400px) {
       .pool {
+      width: 94%;
       height: 100%;
       display: grid;
       grid-template-columns: 25% 25% 25% 25%;
