--- a/voting/index.html
+++ b/voting/index.html
@@ -186,8 +186,13 @@
     }
 
     @media screen and (max-width: 400px) {
+      .img-box {
+      width: 70%;
+      height: 70%;
+      padding: 4%;
+    }
       .pool {
-      width: 94%;
+      width: 92%;
       height: 100%;
       display: grid;
       grid-template-columns: 25% 25% 25% 25%;
