--- a/map_accidents/waze_accidents.html
+++ b/map_accidents/waze_accidents.html
@@ -15,10 +15,9 @@
 	<script src="leaflet-heat.js"></script>
 <style>
  body {
-            height: 90vh;
-            width: 100%;
+            height: 100vh;
+            width: 100vw;
             margin: 0;
-						max-height: 550px;
         }
 				</style>
 </head>
