--- a/map_accidents/waze_accidents.html
+++ b/map_accidents/waze_accidents.html
@@ -15,8 +15,8 @@
 	<script src="leaflet-heat.js"></script>
 <style>
  body {
-            height: 100vh;
-            width: 100vw;
+            height: 100%;
+            width: 100%;
             margin: 0;
         }
 				</style>
@@ -24,7 +24,7 @@
 
 <body>
 		
-<div id="map" style="width: 100%; height: 100%;">
+<div id="map" style="width: 100vw; height: 100vh;">
 		
 </div>
 <script>
