--- a/map_accidents/waze_accidents.html
+++ b/map_accidents/waze_accidents.html
@@ -18,7 +18,7 @@
             height: 70vh;
             width: 100%;
             margin: 0;
-						max-height: 550px;
+						max-height: 400px;
         }
 
 				.legend {
@@ -26,7 +26,7 @@
 					width: 75%;
 					height: 10%;
 					position: absolute;
-					top: 62%;
+					bottom: 0;
 					color: black;
 					display: inline-block;
 				}
