--- a/map_accidents/waze_accidents.html
+++ b/map_accidents/waze_accidents.html
@@ -29,6 +29,7 @@
 					bottom: 0;
 					color: black;
 					display: inline-block;
+					z-index: 999999999999999999999999999;
 				}
 
 				.first {
