--- a/map_accidents/waze_accidents.html
+++ b/map_accidents/waze_accidents.html
@@ -26,7 +26,7 @@
 					width: 75%;
 					height: 10%;
 					position: absolute;
-					bottom: 0;
+					bottom: 10%;
 					color: black;
 					display: inline-block;
 					z-index: 999999999999999999999999999;
@@ -41,40 +41,40 @@
 				.rect_green{
 					float: right;
 					background: green;
-					height: 20px;
-					width: 20px;
+					height: 16px;
+					width: 16px;
 					border-radius: 3px;
 
 				}
 				.rect_blue{
 					float: right;
 					background: blue;
-					height: 20px;
-					width: 20px;
+					height: 16px;
+					width: 16px;
 					border-radius: 3px;
 
 				}
 				.rect_red{
 					float: right;
 					background: red;
-					height: 20px;
-					width: 20px;
+					height: 16px;
+					width: 16px;
 					border-radius: 3px;
 
 				}
 				.rect_maroon{
 					float: right;
 					background: maroon;
-					height: 20px;
-					width: 20px;
+					height: 16px;
+					width: 16px;
 					border-radius: 3px;
 
 				}
 				.rect_black{
 					float: right;
 					background: black;
-					height: 20px;
-					width: 20px;
+					height: 16px;
+					width: 16px;
 					border-radius: 3px;
 				}
 		
@@ -82,8 +82,8 @@
 				.text {
 					margin-left: 5px;
 					margin-right: 6px;
-					height: 30px;
-					font-size: 16px;
+					height: 17px;
+					font-size: 15px;
 					float: right;
 					text-align: center;
 				}
