--- a/map_accidents/waze_accidents.html
+++ b/map_accidents/waze_accidents.html
@@ -20,16 +20,20 @@
             margin: 0;
 						max-height: 400px;
         }
-
+				wrapper {
+					width: 100%;
+					height: 100%;
+					position: absolute;
+					display: grid;
+					grid-auto-rows: auto;
+				}
 				.legend {
 					margin-left: 5%;
 					width: 75%;
 					height: 10%;
 					position: absolute;
-					bottom: 10%;
 					color: black;
 					display: inline-block;
-					z-index: 999999999999999999999999999;
 				}
 
 				.first {
@@ -92,8 +96,8 @@
 </head>
 
 <body>
-		
-<div id="map" style="width: 100%; height: 100%;">
+		<div class="wrapper">
+<div id="map" style="width: 90vw; height: 90vh;">
 
 </div>
 <div class="legend">
@@ -119,7 +123,7 @@
 				
 		<div class="rect_green">
 		</div>
-	
+	</div>
 	
 	
 	
