--- a/d3_jams/jams.html
+++ b/d3_jams/jams.html
@@ -14,8 +14,8 @@
             }
     
             .wrapper {
-                width: 90%;
-                height: 60vh;
+                width: 100%;
+                height: 100%;
             }
     
             .x-axis {
