--- a/voting/index.html
+++ b/voting/index.html
@@ -725,7 +725,7 @@
     document.getElementById("zitny").addEventListener("click", function () { getVote(zitny); getText("Rastislav Žitný", "Kandidoval za Most-Híd.", "https://a-static.projektn.sk/2018/09/zitny.png") })
 
 
-    const allVotes = { "Zákaz hazardu": "neschválený", "Parkovacia politika": "schválená", "Odmietnutie významnej investície pre developerov (hlas za znamenal nesúhlas s úľavami) (hlas za znamenal nesúhlas s úľavami)": "schválený", "Mestské podniky": "schválený", "Predaj PKO": "schválený", "Štatút k parkovaniu": "neschválený", "Developerský poplatok": "schválený", "Prenájom Trnavského mýta": "schválený", "Schválenie verejnej súťaže na prenájom viníc": "neschválený", "Dotácia pre LGBT centrum": "schválený" }
+    const allVotes = { "Zákaz hazardu": "neschválený", "Parkovacia politika": "schválená", "Odmietnutie významnej investície pre developerov (hlas za znamenal nesúhlas s úľavami)": "schválený", "Mestské podniky": "schválený", "Predaj PKO": "schválený", "Štatút k parkovaniu": "neschválený", "Developerský poplatok": "schválený", "Prenájom Trnavského mýta": "schválený", "Schválenie verejnej súťaže na prenájom viníc": "neschválený", "Dotácia pre LGBT centrum": "schválený" }
 
     const augustinic = { "Zákaz hazardu": "nehlasoval/a", "Parkovacia politika": "za", "Odmietnutie významnej investície pre developerov (hlas za znamenal nesúhlas s úľavami)": "neprítomný/á", "Mestské podniky": "za", "Predaj PKO": "za", "Štatút k parkovaniu": "neprítomný/á", "Developerský poplatok": "neprítomný/á", "Prenájom Trnavského mýta": "za", "Schválenie verejnej súťaže na prenájom viníc": "za", "Dotácia pre LGBT centrum": "za" }
 
