--- a/voting/index.html
+++ b/voting/index.html
@@ -598,7 +598,7 @@
         }
       })
     }
-    const boxes = ["boxZákazhazardu", "boxParkovaciapolitika", "boxNesúhlassudelenímvýznamenjinvestíciepredeveloperovbezprerokovanianávrhovvzastupiteľstve-september" "boxOdmietnutievýznamnejinvestíciepredeveloperov-hlaszaznamenalnesúhlassúľavami", "boxMestsképodniky", "boxPredajPKO", "boxŠtatútkparkovaniu", "boxDeveloperskýpoplatok", "boxPrenájomTrnavskéhomýta", "boxSchválenieverejnejsúťaženaprenájomviníc", "boxDotáciapreLGBTcentrum"]
+    const boxes = ["boxZákazhazardu", "boxParkovaciapolitika", "boxNesúhlassudelenímvýznamenjinvestíciepredeveloperovbezprerokovanianávrhovvzastupiteľstve-september","boxOdmietnutievýznamnejinvestíciepredeveloperov-hlaszaznamenalnesúhlassúľavami", "boxMestsképodniky", "boxPredajPKO", "boxŠtatútkparkovaniu", "boxDeveloperskýpoplatok", "boxPrenájomTrnavskéhomýta", "boxSchválenieverejnejsúťaženaprenájomviníc", "boxDotáciapreLGBTcentrum"]
 
     function createVotes(parrent, child, text) {
       let parrentElement = document.querySelector(parrent);
