--- a/kalkulacka/poslanci.html
+++ b/kalkulacka/poslanci.html
@@ -101,9 +101,9 @@ function elements() {
 
     createElement("div", ".main-box", "text-box") 
 
-    createElement("p", ".text-box", "title", "", districtTitle)
+    createElement("p", ".text-box", "title", "")
     createElement("p", ".text-box", "question")
-    createElement("div", ".main-box", "progress-box") 
+    createElement("div", ".main-box", "bars") 
 
     createElement("a", ".buttons-box", "btn", "yes", "áno")
     createElement("a", ".buttons-box", "btn", "no", "nie")
@@ -115,21 +115,10 @@ function removeElement(parrent, child) {
     selector(parrent).removeChild(selector(child))
 }
 
-function box() {
-    for (let i=0; i<24; i++) {
-        let circleId = `circle${i}`;
-        if (i === 0) {
-            createElement("div", ".progress-box", "circle full", circleId) 
-        } else {
-        createElement("div", ".progress-box", "circle", circleId) 
-}
-    }
-}
 
 function startApp () {
     mainApp();
 elements();
-box();
 selector(".question").textContent = questions[stateQuestion]
 
 selector("#yes").addEventListener("click", function() {chooseAnswer("áno")})
@@ -150,10 +139,7 @@ function chooseAnswer(btn) {
   let questionText = selector(".question").textContent;
   let answerText = btn;
   count = count + 1;
-  let circleId = `circle${count}`;
-  if (count < 24) {
-  document.getElementById(circleId).style.background = "white"
-  }
+  
   // store user's answers in array
   data.push({question: questionText, answer: answerText})
   stateQuestion++;
@@ -356,11 +342,6 @@ function  goBack() {
 
 }
 
-//TODO 
-//results
-//show user answer and compare them with candidates answer on click
-//if same, background green
-//if different, background red
 
 
 </script>
